--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -15,7 +15,7 @@
   gap: 0.25rem;
 }
 
-.button {
+/* .button {
   padding: 0.25rem 0.75rem;
   border: 1px solid #4f46e5;
   background-color: #fff;
@@ -28,7 +28,7 @@
 .button:hover {
   background-color: #4f46e5;
   color: #fff;
-}
+} */
 
 .value {
   min-width: 2rem;
